feat(backend): thread create, services for reply,tag,category
